--- a/homework.ipynb
+++ b/homework.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "4         0.055      7  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -400,17 +400,18 @@
        "5                      -25.32426                             NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "penguins.head()penguins_adelie = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/refs/heads/main/data/palmer-penguins-adelie.csv\", index_col=\"Sample Number\")\n",
+    "penguins_adelie = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/refs/heads/main/data/palmer-penguins-adelie.csv\", index_col=\"Sample Number\")\n",
     "penguins_gentoo = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/refs/heads/main/data/palmer-penguins-gentoo.csv\", index_col=\"Sample Number\")\n",
     "penguins_chinstrap = pd.read_csv(\"https://raw.githubusercontent.com/bu-cds-omds/dx602-examples/refs/heads/main/data/palmer-penguins-chinstrap.csv\", index_col=\"Sample Number\")\n",
-    "penguins = pd.concat([penguins_adelie, penguins_gentoo, penguins_chinstrap])"
+    "penguins = pd.concat([penguins_adelie, penguins_gentoo, penguins_chinstrap])\n",
+    "penguins.head()"
    ]
   },
   {
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +594,7 @@
        "Gentoo penguin (Pygoscelis papua)         Anvers Biscoe            -26.185298  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +641,7 @@
        "array(['Torgersen', 'Biscoe', 'Dream'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +877,7 @@
        "[672 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +981,7 @@
        "pear     green     3.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1049,7 @@
        "grape       3"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1148,7 @@
        "pear     green     3.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1236,7 @@
        "4       U104          d8234"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1312,7 @@
        "e9999       1.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1411,7 @@
        "4       U104          d8234       0.78"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1458,7 @@
        "67"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1555,7 @@
        "4' x 8' x 18\"  226.92"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1642,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1739,7 @@
        "Gentoo penguin (Pygoscelis papua)            124"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1842,7 @@
        "5  10   8"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1933,7 @@
        "7  777"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2040,7 @@
        "5  10   8    NaN"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2060,7 @@
        "(6, 6)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2111,7 @@
        "'Chinstrap penguin (Pygoscelis antarctica)'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2152,7 @@
        "'Adelie Penguin (Pygoscelis adeliae)'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2180,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2191,7 +2192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2213,7 @@
        "Name: count, Length: 114, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2323,7 @@
        "5  candy      water  1.00"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2338,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2361,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2424,7 +2425,7 @@
        "candy         0.00    0.0    2.0    1.0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2448,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2465,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2475,7 @@
        "767.59"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2519,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2600,7 +2601,7 @@
        "2      9"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2622,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2636,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2692,7 @@
        "2     8  f17a.tsv"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2717,7 +2718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2735,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2848,7 @@
        "2  widget                5  sandpaper                   3            1.00"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2876,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2890,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2935,7 +2936,7 @@
        "3  Chinstrap penguin (Pygoscelis antarctica)  MALE           51.094118"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2966,7 +2967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2987,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3033,7 +3034,7 @@
        "supplier_a_20.tsv  21.0"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3046,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3097,7 +3098,7 @@
        "supplier_b_20.tsv  34.5"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
