--- a/homework.ipynb
+++ b/homework.ipynb
@@ -662,19 +662,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "target_sexes = ['F']\n",
-    "p3 = \"Sex in @target_sexes and Rings <= 10\""
+    "p3 = 'Sex == \"F\" and Rings <= 10'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +876,7 @@
        "[672 rows x 9 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2967,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2982,13 +2981,13 @@
     "        joined_file[\"cost\"] = joined_file[\"component_quantity\"]*joined_file[\"component_cost\"]\n",
     "        joined_file[\"filename\"] = c\n",
     "        joined_list.append(joined_file)\n",
-    "        filename_cost = pd.concat(joined_list)\n",
-    "    return filename_cost.groupby(\"filename\")[[\"cost\"]].sum()"
+    "    filename_cost = pd.concat(joined_list)\n",
+    "    return filename_cost.groupby(\"filename\", as_index=False)[[\"cost\"]].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -3012,16 +3011,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cost</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>filename</th>\n",
-       "      <th></th>\n",
+       "      <th>cost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>supplier_a_20.tsv</th>\n",
+       "      <th>0</th>\n",
+       "      <td>supplier_a_20.tsv</td>\n",
        "      <td>21.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3029,12 +3026,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                   cost\n",
-       "filename               \n",
-       "supplier_a_20.tsv  21.0"
+       "            filename  cost\n",
+       "0  supplier_a_20.tsv  21.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3047,7 +3043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3071,20 +3067,19 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cost</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>filename</th>\n",
-       "      <th></th>\n",
+       "      <th>cost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>supplier_a_20.tsv</th>\n",
+       "      <th>0</th>\n",
+       "      <td>supplier_a_20.tsv</td>\n",
        "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>supplier_b_20.tsv</th>\n",
+       "      <th>1</th>\n",
+       "      <td>supplier_b_20.tsv</td>\n",
        "      <td>34.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3092,13 +3087,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                   cost\n",
-       "filename               \n",
-       "supplier_a_20.tsv  21.0\n",
-       "supplier_b_20.tsv  34.5"
+       "            filename  cost\n",
+       "0  supplier_a_20.tsv  21.0\n",
+       "1  supplier_b_20.tsv  34.5"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
